[package]
name = "dcc-mcp-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified MCP gateway: discovers running DCC instances and routes agent requests"

[[bin]]
name = "dcc-mcp-gateway"
path = "src/main.rs"

[dependencies]
dcc-mcp-transport.workspace = true
dcc-mcp-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
reqwest.workspace = true
axum = { version = "0.8", features = ["http1", "http2", "tokio"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
clap = { version = "4", features = ["derive", "env"] }
