[package]
name = "dcc-mcp-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-DCC MCP gateway: aggregation, routing, capability index, REST/MCP dynamic-capability surface (#653/#654/#655) — extracted from dcc-mcp-http"
build = "build.rs"

[dependencies]
# Internal
dcc-mcp-db = { path = "../dcc-mcp-db", default-features = false }
dcc-mcp-actions = { path = "../dcc-mcp-actions" }
dcc-mcp-gateway-core = { path = "../dcc-mcp-gateway-core" }
dcc-mcp-jsonrpc = { path = "../dcc-mcp-jsonrpc" }
dcc-mcp-naming = { path = "../dcc-mcp-naming" }
dcc-mcp-transport = { path = "../dcc-mcp-transport" }
dcc-mcp-telemetry = { path = "../dcc-mcp-telemetry", optional = true }
dcc-mcp-skill-rest = { path = "../dcc-mcp-skill-rest" }
dcc-mcp-skills = { path = "../dcc-mcp-skills", default-features = false }
dcc-mcp-catalog = { path = "../dcc-mcp-catalog" }
opentelemetry = { version = "0.32", features = ["trace"], optional = true }
prometheus = { version = "0.14", default-features = false, optional = true }

# Workspace shared
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
toon-format = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
socket2 = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
mdns-sd = { workspace = true, optional = true }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP server
axum = { version = "0.8", features = ["http1", "tokio"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
sysinfo = { workspace = true }
http = "1.0"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync", "tokio-util"] }

# `nucleo-matcher` backs fuzzy capability search via the `dcc-mcp-gateway-search`
# crate (transitive through `dcc-mcp-gateway-core`).

workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = ["prometheus"]
admin = []
admin-persist-sqlite = ["admin", "dcc-mcp-db/gateway-admin-sqlite"]
telemetry = ["dep:dcc-mcp-telemetry", "dep:opentelemetry"]
prometheus = ["telemetry", "dcc-mcp-telemetry/prometheus", "dep:prometheus"]
mdns = ["dcc-mcp-transport/mdns", "dep:mdns-sd"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
criterion = { version = "0.8", features = ["html_reports"] }
tower = { version = "0.5", features = ["util"] }
proptest = "1.5"

[[bench]]
name = "search_bench"
harness = false
