[package]
name = "dcc-mcp-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-DCC main-thread dispatcher primitives for the DCC-MCP ecosystem"

[dependencies]
tokio = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
pyo3-stub-gen-derive = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
# Enable `auto-initialize` only during testing so the in-crate Rust
# tests that exercise the PyO3 surface can spin up an embedded Python
# interpreter automatically. Production wheels do NOT pull this in.
pyo3 = { workspace = true, features = ["auto-initialize"] }

[features]
default = []
python-bindings = ["pyo3"]
stub-gen = ["python-bindings", "dep:pyo3-stub-gen", "dep:pyo3-stub-gen-derive"]
