[package]
name = "dcc-mcp-http-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Wire-level value types for the DCC MCP HTTP server — no axum/tokio/reqwest."
keywords = ["mcp", "http", "types", "clean-architecture"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
# Internal — DccMcpError is the cross-crate error taxonomy that
# HttpError bubbles into (issue #488). dcc-mcp-models is itself a
# pure-types crate, so depending on it here keeps the dependency
# direction inward.
dcc-mcp-models = { path = "../dcc-mcp-models" }
dcc-mcp-gateway-core = { path = "../dcc-mcp-gateway-core" }
dcc-mcp-jsonrpc = { path = "../dcc-mcp-jsonrpc" }

# Workspace shared
serde = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
