[package]
name = "dcc-mcp-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP Streamable HTTP server for DCC applications (axum-based, thread-safe)"

[dependencies]
# Internal crates
dcc-mcp-actions = { path = "../dcc-mcp-actions" }
dcc-mcp-naming = { path = "../dcc-mcp-naming" }
dcc-mcp-protocols = { path = "../dcc-mcp-protocols" }
dcc-mcp-models = { path = "../dcc-mcp-models" }
dcc-mcp-skills = { path = "../dcc-mcp-skills" }
dcc-mcp-pybridge = { path = "../dcc-mcp-pybridge", optional = true }
dcc-mcp-transport = { path = "../dcc-mcp-transport" }
dcc-mcp-sandbox = { path = "../dcc-mcp-sandbox" }
dcc-mcp-capture = { path = "../dcc-mcp-capture" }
dcc-mcp-telemetry = { path = "../dcc-mcp-telemetry", optional = true }
dcc-mcp-workflow = { path = "../dcc-mcp-workflow" }
dcc-mcp-artefact = { path = "../dcc-mcp-artefact" }

# Workspace shared
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
socket2 = { workspace = true }
parking_lot = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
base64 = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP server
# MCP Streamable HTTP uses HTTP/1.1 SSE; http2 is not required and pulls in
# the heavy `h2` crate — keep it disabled for faster builds.
axum = { version = "0.8", features = ["http1", "tokio"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1.0"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync", "tokio-util"] }
pin-project-lite = "0.2"

# High-performance fuzzy matcher for the capability search layer
# (issue #659). `nucleo-matcher` is the standalone matcher extracted
# from the `nucleo` picker used by the Helix editor — it carries no
# async / TUI dependencies, only the bare scoring engine. It gives us
# Smith-Waterman-style fuzzy matching with typo tolerance and
# case/pre-fix weighting, and benchmarks sub-microsecond per match on
# the small strings (tool names, summaries) we feed it.
nucleo-matcher = "0.3"

# Compile-time OpenAPI 3.1 document generation for the per-DCC REST
# skill API surface (#658 / #660). Using `utoipa` keeps the contract
# in lock-step with the Rust types — no hand-maintained JSON — while
# pulling in no runtime cost (everything is expanded in proc-macros).
utoipa = { version = "5.4", features = ["axum_extras"] }

# PyO3 (optional)
pyo3 = { workspace = true, optional = true }

# Type-stub generation (opt-in via `stub-gen` feature).
pyo3-stub-gen = { workspace = true, optional = true }
pyo3-stub-gen-derive = { workspace = true, optional = true }

# Optional SQLite JobStorage backend (issue #328). Gated behind the
# `job-persist-sqlite` feature so the default build has zero SQLite cost.
rusqlite = { workspace = true, optional = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
axum-test = "20"
rstest = "0.26"
tempfile = "3"
dcc-mcp-sandbox = { path = "../dcc-mcp-sandbox" }

[features]
default = []
python-bindings = ["pyo3", "dcc-mcp-actions/python-bindings", "dcc-mcp-skills/python-bindings", "dcc-mcp-artefact/python-bindings", "dep:dcc-mcp-pybridge", "dcc-mcp-pybridge/python-bindings"]
# Enable `pyo3-stub-gen` annotations on this crate's PyO3 types.
stub-gen = ["python-bindings", "dep:pyo3-stub-gen", "dep:pyo3-stub-gen-derive"]
# Enable the Prometheus `/metrics` endpoint (issue #331). Pulls in the
# matching `prometheus` feature of dcc-mcp-telemetry. Off by default so
# zero Prometheus code compiles into the wheel when not requested.
prometheus = ["dep:dcc-mcp-telemetry", "dcc-mcp-telemetry/prometheus"]
# Persist tracked Jobs in a SQLite database so they survive a server
# restart (issue #328). Pulls in the bundled `rusqlite` driver.
# Off by default — the wheel's default build uses the in-memory store.
job-persist-sqlite = ["dep:rusqlite"]
