[package]
name = "dcc-mcp-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Tracing subscriber bootstrap and rolling file-logging layer for the dcc-mcp ecosystem"

[dependencies]
pyo3 = { workspace = true, optional = true }

# Type-stub generation (opt-in via `stub-gen` feature).
pyo3-stub-gen = { workspace = true, optional = true }
pyo3-stub-gen-derive = { workspace = true, optional = true }

# Internal — required for the platform `get_log_dir()` resolver. After
# issue #485 lands the dependency will swap to `dcc-mcp-paths`.
dcc-mcp-utils = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
time = { workspace = true }
parking_lot = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = []
python-bindings = ["pyo3"]
# Enable `pyo3-stub-gen` annotations on this crate's PyO3 types.
stub-gen = ["python-bindings", "dep:pyo3-stub-gen", "dep:pyo3-stub-gen-derive"]
