[package]
name = "dcc-mcp-marketplace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared marketplace domain layer for catalog fetch, install/uninstall, source management, and integrity verification"

[dependencies]
dcc-mcp-catalog.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
serde_json.workspace = true
sha2 = "0.11"
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
