[package]
name = "dcc-mcp-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data models for the DCC-MCP ecosystem (ActionResultModel, SkillMetadata)"

[dependencies]
pyo3 = { workspace = true, optional = true }
dcc-mcp-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }

[features]
default = []
python-bindings = ["pyo3", "dcc-mcp-utils/python-bindings"]

[dev-dependencies]
serde_yaml_ng = { workspace = true }
