[package]
name = "dcc-mcp-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data models for the DCC-MCP ecosystem (ActionResultModel, SkillMetadata)"

[dependencies]
pyo3 = { workspace = true, optional = true }

# Type-stub generation (opt-in via `stub-gen` feature).
pyo3-stub-gen = { workspace = true, optional = true }
pyo3-stub-gen-derive = { workspace = true, optional = true }

dcc-mcp-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
uuid = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = []
python-bindings = ["pyo3", "dcc-mcp-utils/python-bindings"]
# Enable `pyo3-stub-gen` annotations on this crate's PyO3 types.
stub-gen = ["python-bindings", "dep:pyo3-stub-gen", "dep:pyo3-stub-gen-derive"]
