[package]
name = "dcc-mcp-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data models for the DCC-MCP ecosystem (ActionResultModel, SkillMetadata)"

[dependencies]
pyo3 = { workspace = true, optional = true }

# Type-stub generation (opt-in via `stub-gen` feature).
pyo3-stub-gen = { workspace = true, optional = true }
pyo3-stub-gen-derive = { workspace = true, optional = true }

dcc-mcp-naming = { workspace = true }
dcc-mcp-pybridge = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[features]
default = []
python-bindings = ["pyo3", "dcc-mcp-naming/python-bindings", "dep:dcc-mcp-pybridge", "dcc-mcp-pybridge/python-bindings"]
# Enable `pyo3-stub-gen` annotations on this crate's PyO3 types.
stub-gen = ["python-bindings", "dep:pyo3-stub-gen", "dep:pyo3-stub-gen-derive"]
# Expose the shared `registry::testing` harness so downstream crates can call
# `dcc_mcp_models::registry::testing::assert_registry_contract` in their tests.
testing = []
