[package]
name = "dcc-mcp-protocols"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP protocol type definitions for the DCC-MCP ecosystem"

[dependencies]
pyo3 = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
python-bindings = ["pyo3"]
