[package]
name = "dcc-mcp-protocols"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP protocol type definitions for the DCC-MCP ecosystem"

[dependencies]
pyo3 = { workspace = true, optional = true }
dcc-mcp-utils = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
python-bindings = ["pyo3", "dcc-mcp-utils/python-bindings"]

[dev-dependencies]
serde_json = { workspace = true }
